removed references to existing S3 bucket names

--- a/aws/blogen-beanstalk.yaml
+++ b/aws/blogen-beanstalk.yaml
@@ -6,7 +6,7 @@ Description: >
 Parameters:
   ApplicationS3Bucket:
     Type: String
-    Default: 'strohs-ci-cd'
+    Default: 'bucket'
     # NOTE bucket versioning should be enabled, especially if you're deploying updates to the application
     Description: Name of the S3 bucket that contains the blogen application code. Bucket Versioning in S3 should be enabled
   ApplicationS3Key:
