updated AWS Java SDK to latest version

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -27,5 +27,5 @@ blogen.recreate.table.if.exists=true
 aws.accesskey=yourAccessKey
 aws.secretkey=yourSecretKey
 
-# during development, set the embedded tomcat port to 8088 so that it doesn't conflict with the npm dev server
+# during development, set the embedded tomcat port to 8088 so that it doesn't conflict with the npm dev server on 8080
 server.port=8088
