--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,11 +2,8 @@
 # dynamodb-local profile will try to start a local version of dynamoDB
 #spring.profiles.active=dev,dynamodb-local
 
-logging.level.com.cliff.aws.blogen=debug
-
 # signing region used to create the DynamoDB client, defaults to us-east-1 if omitted here
 aws.signing.region=us-east-1
-
 
 #number of threads to display, per page
 blogen.threads.per.page=4
@@ -17,3 +14,12 @@ blogen.search.results.per.page=5
 #number of categories to display, per page, on the admin's categories page
 blogen.categories.per.page=5
 
+
+# In production environments it is assumed that Cognito will have already been
+# set up before running this application. Therefore, you must configure the ID's of the
+# AWS Cognito User Pool, Identity Pool, and region they are in.
+# These parameters are then used be spring security to verify cognito tokens.
+# At a minimum you must configure a region, or else it will default to us-east-1
+blogen.security.jwt.aws.region=us-east-1
+blogen.security.jwt.aws.userPoolId=
+blogen.security.jwt.aws.identityPoolId=
