converted bootstrap modal windows into a reuseable vue component

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,13 +1,12 @@
 logging.level.com.cliff.aws.blogen=debug
 
-# This controls if AWS resources should be created and then bootstrapped with dummy data.
-# It will create a cognito user pool, cognito identity pool, and a DynamoDB table.
-# The resources will be deleted once this application is stopped
+# This controls if AWS resources should be created and bootstrapped with dummy user data during development.
+# It true, a cognito user pool, cognito identity pool, cognito application client and a DynamoDB table
+# will be created. Five users will be created in the user pool and 26 posts will be created in DynamoDB.
+# The resources will then be removed once this spring boot server is stopped.
+# This property will default to false.
 blogen.bootstrap.data=true
 
-# If true this will delete and then recreate the blogen dynamoDB table when this application starts up.
-# If false, the table will not be created. It is assumed that the blogen dynamoDB table already exists
-blogen.recreate.table.if.exists=true
 
 # You can override your AWS accessKey and secretKey here.
 # If you do so, they will override AWS's default credential provider chain.
