UserProfile form updated to latest version of Vuelidate

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,10 +1,9 @@
 logging.level.com.cliff.aws.blogen=debug
 
-# This controls if AWS resources should be created and bootstrapped with dummy user data during development.
+# This controls if AWS resources should be created and bootstrapped with dummy user data during server start.
 # It true, a cognito user pool, cognito identity pool, cognito application client and a DynamoDB table
 # will be created. Five users will be created in the user pool and 26 posts will be created in DynamoDB.
-# The resources will then be removed once this spring boot server is stopped.
-# This property will default to false.
+# This property will default to false if missing.
 blogen.bootstrap.data=true
 
 
@@ -24,5 +23,5 @@ aws.secretkey=
 
 
 # during development, set the embedded tomcat port to 8088 so that it doesn't conflict with
-# any dev servers running on Node.js, typically they run on port 8080
+# any development servers running on Node.js, typically they run on port 8080 or 3000
 server.port=8088
