--- a/backend/src/main/resources/application-dynamodb-local.properties
+++ b/backend/src/main/resources/application-dynamodb-local.properties
@@ -1,2 +1,5 @@
+# This profile will attempt to start a local version of DynamoDB. It requires the sqllite
+# libraries in the 'native-libs' directory
+
 # if using the dynamodb-local profile, you may explicitly set the local port
 aws.dynamodb-local.port=8000
