--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,24 +1,22 @@
-# dev profile will enable CORS support for the Vue/npm development server
-# dynamodb-local profile will try to start a local version of dynamoDB
 #spring.profiles.active=dev,dynamodb-local
 
 # signing region used to create the DynamoDB client, defaults to us-east-1 if omitted here
 aws.signing.region=us-east-1
 
-#number of threads to display, per page
+# default number of blogen threads to display, per page
 blogen.threads.per.page=4
 
-#number of search results to display per page
+# default number of search results to display per page
 blogen.search.results.per.page=5
 
-#number of categories to display, per page, on the admin's categories page
+# default number of categories to display, per page, on the admin's categories page
 blogen.categories.per.page=5
 
 
-# In production environments it is assumed that Cognito will have already been
+# These three parameters are used by spring security to authenticate JWTs issued by Cognito.
+# In production environments, it is assumed that Cognito resources will have been
 # set up before running this application. Therefore, you must configure the ID's of the
 # AWS Cognito User Pool, Identity Pool, and region they are in.
-# These parameters are used by spring security to verify cognito tokens.
 blogen.security.jwt.aws.region=us-east-1
 blogen.security.jwt.aws.userPoolId=
 blogen.security.jwt.aws.identityPoolId=
