updated main README.md and added sample images

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.com.cliff.aws.blogen=debug
 # signing region used to create the DynamoDB client, defaults to us-east-1 if omitted here
 aws.signing.region=us-east-1
 
-# default number of blogen threads to display, per page
+# default number of blogen meesage threads to display, per page
 blogen.threads.per.page=4
 
 # default number of search results to display per page
